Use released graphql-jpa 0.3; add missing dependencies; Use platform-bom

--- a/pom.xml
+++ b/pom.xml
@@ -2,30 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>io.spring.platform</groupId>
+		<artifactId>platform-bom</artifactId>
+		<version>Brussels-SR1</version>
+		<relativePath />
 	</parent>
-
 	<groupId>com.github.timtebeek</groupId>
 	<artifactId>graphql-jpa-spring-boot-starter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
 	<name>graphql-jpa-spring-boot-starter</name>
 	<description>Spring Boot starter for GraphQL JPA; Expose JPA entities with GraphQL.</description>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<graphql-java.version>2.3.0</graphql-java.version>
-		<graphql-jpa.version>0.3-SNAPSHOT</graphql-jpa.version>
+		<graphql-jpa.version>0.3</graphql-jpa.version>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>com.graphql-java</groupId>
@@ -37,13 +32,19 @@
 			<artifactId>graphql-jpa</artifactId>
 			<version>${graphql-jpa.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -55,4 +56,14 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>bintray-jcrygier-maven</id>
+			<name>bintray</name>
+			<url>http://dl.bintray.com/jcrygier/maven</url>
+		</repository>
+	</repositories>
 </project>
