--- a/pom.xml
+++ b/pom.xml
@@ -78,4 +78,17 @@
 			<url>https://api.bintray.com/maven/timtebeek/maven/graphql-jpa-spring-boot-starter/;publish=1</url>
 		</repository>
 	</distributionManagement>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<useReleaseProfile>false</useReleaseProfile>
+					<releaseProfiles>release</releaseProfiles>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
