--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.spring.platform</groupId>
@@ -10,7 +9,7 @@
 	</parent>
 	<groupId>com.github.timtebeek</groupId>
 	<artifactId>graphql-jpa-spring-boot-starter</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>graphql-jpa-spring-boot-starter</name>
 	<description>Spring Boot starter for GraphQL JPA; Expose JPA entities with GraphQL.</description>
@@ -70,7 +69,7 @@
 		<connection>scm:git:https://github.com/timtebeek/graphql-jpa-spring-boot-starter.git</connection>
 		<developerConnection>scm:git:git@github.com:timtebeek/graphql-jpa-spring-boot-starter.git</developerConnection>
 		<url>https://github.com/timtebeek/graphql-jpa-spring-boot-starter</url>
-		<tag>HEAD</tag>
+		<tag>graphql-jpa-spring-boot-starter-0.0.1</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
