--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.github.timtebeek</groupId>
 	<artifactId>graphql-jpa-spring-boot-starter</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<packaging>jar</packaging>
 	<name>graphql-jpa-spring-boot-starter</name>
 	<description>Spring Boot starter for GraphQL JPA; Expose JPA entities with GraphQL.</description>
@@ -69,7 +69,7 @@
 		<connection>scm:git:https://github.com/timtebeek/graphql-jpa-spring-boot-starter.git</connection>
 		<developerConnection>scm:git:git@github.com:timtebeek/graphql-jpa-spring-boot-starter.git</developerConnection>
 		<url>https://github.com/timtebeek/graphql-jpa-spring-boot-starter</url>
-		<tag>HEAD</tag>
+		<tag>graphql-jpa-spring-boot-starter-0.0.3</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
